--- a/themes/tale-theme/assets/scss/tale/_post.scss
+++ b/themes/tale-theme/assets/scss/tale/_post.scss
@@ -5,15 +5,14 @@
   &-hero {
     overflow: hidden;
     min-height: 300px;
-    height: 60vh;
+    height: auto;
     width: 100%;
     margin: 0;
-        img {
-            min-width: 100%;
-            min-height: 100%;
-            margin-bottom: 0;
-            object-fit: cover;
-        }
+    position: relative;
+
+    img {
+
+    }
   }
   &__all-info {
     text-align: center;
@@ -119,10 +118,10 @@
     }
     &-hero {
       min-height: 600px;
-      height: 75vh;
-      img {
-      min-width: 100%;
-      }
+      // height: 75vh;
+      // img {
+      // min-width: 100%;
+      // }
     }
     &__body {
       max-width: 800px;
@@ -145,7 +144,7 @@
 @media (min-width: 1440px) {
   .post {
     &-hero {
-      height: 70vh;
+      // height: 70vh;
     }
     &__all-info {
       padding: 3rem 0;
