added cloudinary image theme

--- a/themes/tale-theme/layouts/partials/single/hero.html
+++ b/themes/tale-theme/layouts/partials/single/hero.html
@@ -1,7 +1,9 @@
 <figure class="post-hero">
 
-  {{- if .Params.Hero }}
-      <img src={{ .Params.Hero }}></img>
+  {{- with .Params.Hero }}
+      {{ $imgSrc := partial "getImgSrcHero" . }}
+      {{ $alt := humanize (index (split (path.Base . ) ".") 0) }}
+      {{ partial "picture" (dict "imgSrc" $imgSrc "alt" $alt) }}
   {{- end }}
  
 </figure>
