--- a/themes/tale-theme/layouts/_default/baseof.html
+++ b/themes/tale-theme/layouts/_default/baseof.html
@@ -13,6 +13,15 @@
         <body >
             {{ partial "header.html" . }}
             {{ block "main" . }}{{ end }}
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJB1MBCE8X"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'G-HJB1MBCE8X');
+            </script>
         </body>
     {{ end }}
 </html>
